<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fare Calculator</string>
    <string name="action_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_dist">Distance :</string>
    <string name="distance">in km</string>
    <string name="calculate">Fare</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="fare"/>
    <string-array name="city_options">
        <item>Mumbai</item>
        <item>Thane</item>
    </string-array>
    <string-array name="type_options">
        <item>Auto</item>
        <item>Taxi</item>
    </string-array>
    <string name="tabText1">Meter</string>
    <string name="tabText2">Card</string>
    <string name="enter_unit">Units:</string>
    <string name="Unit">unit</string>

</resources>