<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Calculate" >

    <RadioGroup
        android:id="@+id/search_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingTop="@dimen/activity_vertical_margin" >

        <RadioButton
            android:id="@+id/day_button"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:checked="true"
            android:text="@string/day"
    		android:paddingRight="@dimen/activity_horizontal_margin" />

        <RadioButton
            android:id="@+id/night_button"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:checked="false"
            android:text="@string/night"
    		android:paddingRight="@dimen/activity_horizontal_margin" />
    </RadioGroup>
    
    <Switch
        android:id="@+id/togglebutton"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:onClick="onSwitchClicked"
        android:layout_gravity="center_horizontal"
        android:textOff="Distance"
        android:textOn="Unit" />
	
    <LinearLayout
        android:id="@+id/SubLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >
        
        <TextView
        	android:id="@+id/TextView1"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/Enter_val"
        	android:textSize="@dimen/textsize"
        	 />
        
        <EditText
        	android:id="@+id/edit_text"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/distance">
    	</EditText>
        
    </LinearLayout>
    
	<Button
	    android:id="@+id/button1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:text="@string/calculate" />

	<TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fare"
        android:textSize="@dimen/textsize" 
        android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingTop="@dimen/activity_vertical_margin"/>
    

</LinearLayout>